# ArtRobot

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  Setup.sh  Start.sh  color.cpp  color.h  default.h  demo-ajax.php  demo-select.php  demo.php  draw.c  draw.cpp  draw.h  export.php  imgshow.php  index.php  json.cpp  json.h  main.c  main.cpp
cmake/: FindLibrary.cmake
core/: Args.cpp  Args.h  CMakeLists.txt  Color.cpp  Color.h  Json.cpp  Json.h  args.cpp  args.h  color.cpp  draw.cpp  draw.h  json.cpp  main.cpp
file/: 1.php  Art_robot  json.txt  run.php
file/cairo/me/: Makefile  ibm_cairo_logo.c
file/json/: 1.php
image/: error.ai  loading.ai
include/ArtRobot/: ArtRobot.h  Renderer.h
include/ArtRobot/Component/: Base.h  Circle.h  Group.h  Image.h  ImageMask.h  Rectangle.h  RectangleRound.h  Repeat.h  Svg.h  Text.h  TextArea.h
include/ArtRobot/Types/: Color.h  OutputType.h
main/: CMakeLists.txt  default.h  draw.cpp  draw.h  json.cpp  json.h  main.cpp
php/: export.php  getjson.php  imgshow.php  index.html  index.php  test.php
php/template/1/: data.bak2.json  data.json
samples/OctopusRender/src/: Args.cpp  Args.h  CommonIncludes.h  main.cpp
samples/OctopusRender/template/SaySticker/: SaySticker.ai  SaySticker.json  SaySticker2.json
samples/OctopusRender/template/ThrowIt/: ThrowIt.json  p.psd
samples/OctopusRender/template/demo/: demo.json
src/: Args.cpp  Args.h  ArtRobot.hpp  Color.cpp  Color.h  Component.cpp  Component.h  ComponentGroup.cpp  ComponentGroup.h  ComponentImage.cpp  ComponentImage.h  ComponentImageMask.cpp  ComponentImageMask.h  ComponentRectangle.cpp  ComponentRectangle.h  ComponentRepeat.cpp  ComponentRepeat.h  ComponentSvg.cpp  ComponentSvg.h  ComponentText.cpp  ComponentText.h  Draw.cpp  Draw.h  Features.hpp.in  Image.cpp  Image.h  Jpeg.cpp  Jpeg.h  Json.cpp  Renderer.cpp  Renderer.h  Renderer.hpp  component.rs  default.h  lib.rs  main.cpp  renderer.rs  types.rs
src/Component/: Base.cpp  Base.hpp  Circle.cpp  Circle.hpp  Group.cpp  Group.hpp  Image.cpp  Image.hpp  ImageMask.cpp  ImageMask.hpp  Mask.cpp  Mask.hpp  Rectangle.cpp  Rectangle.hpp  RectangleRound.cpp  RectangleRound.hpp  Repeat.cpp  Repeat.hpp  Svg.cpp  Svg.hpp  Text.cpp  Text.hpp  TextArea.cpp  TextArea.hpp
src/Types/: Color.cpp  Color.hpp  OutputType.hpp  Property.hpp  TextAlign.hpp  Transform.cpp  Transform.hpp
template/: default
template/1/: data-m-pdf.json  data-m.json  data.bak.json  data.json
template/1/img/: bg-veins.ai  logo.ai
template/ThrowIt/: ThrowIt.json
template/demo/: Lantinghei.ttc  data.json  demo.json
template/工作牌demo/: data.json
template/工作牌demo/fonts/: Yuanti.ttc
template/工作牌demo/img/: bg.ai
test/: Test.cpp  TestImage.cpp  testImage.cpp
